--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="src/styles.css" />
 </head>
 <body>
-  <h1> Daily Bread</h1>
+  <h1> Break Through🌱</h1>
 
   <div id="verse-card" class="card">Loading...</div>
-  <button id="refresh-btn" class="refresh-btn"> Random Psalm</button>
+  <button id="refresh-btn" class="refresh-btn"> Restore & Refresh</button>
 
   <script type="module" src="src/main.js"></script>
 </body>
